made search page, fixed horizontal scroll

--- a/client/src/components/App/App.css
+++ b/client/src/components/App/App.css
@@ -1,15 +1,19 @@
 .app {
-  width: 100vw;
+  min-width: 100%;
   padding: 0.5rem;
+  margin: 0;
 }
 
 .app__contents {
   margin-top: 3.5rem;
+  margin-bottom: 3rem;
+  display: flex;
+  max-width: 100%;
+  flex-direction: column;
 }
 
 @media only screen and (min-width: 768px) {
   .app__contents {
-    display: flex;
     flex-direction: row;
   }
 }
