--- a/client/src/components/NavMenu/NavMenu.css
+++ b/client/src/components/NavMenu/NavMenu.css
@@ -17,13 +17,15 @@
   color: #213547;
 }
 
-@media only screen and (min-width: 768px) {
+@media screen and (min-width: 768px) {
   .nav {
-    position: static;
+    position: relative;
     max-width: 20vw;
     border-top: none;
     border-right: solid 1px #213547;
     margin-right: 1rem;
+    left: auto;
+    bottom: auto;
   }
   .nav__list {
     flex-direction: column;
