--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 * {
   margin: 0;
   box-sizing: border-box;
@@ -18,6 +22,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+#root {
+  width: 100vw;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
@@ -27,12 +35,15 @@ a:hover {
   color: #535bf2;
 }
 
+html {
+  overflow-y: scroll;
+}
+
 body {
   margin: 0;
   display: flex;
   place-items: center;
-  width: 100vw;
-  /* max-height: 100vh; */
+  width: 100%;
 }
 
 button {
